# yadroTask

./: CMakeLists.txt  README.md  Sort.cpp  Sort.h  Tape.cpp  Tape.h  config.h  config.h.in  main.cpp
